# attitude

./: CMakeLists.txt  README.md
doc/: main.tex
include/: base.h  common.h  crp.h  dcm.h  euler.h  matrix.h  matrix9.h  mrp.h  quaternion.h  shepherds.h
include/attitude/: base.h  crp.h  dcm.h  euler.h  matrix.h  mrp.h  quaternion.h  shepherds.h
test/: CMakeLists.txt  amatrix.cpp  crodriguez.cpp  dcm.cpp  euler.cpp  helper.cpp  helpers.cpp  main.cpp  matrix.cpp  mrodriguez.cpp  quaternion.cpp  vector.cpp
test/include/: helper.h  helpers.h
